# modex-c

./: Makefile.am  README.md  configure.ac
lib/: Makefile.am  mx_color.h  mx_log.c  mx_log.h  mx_math.c  mx_math.h  mx_memory.h  mx_types.h  mx_video.c  mx_video.h
lib/core/: mx_color.h  mx_log.c  mx_log.h  mx_math.c  mx_math.h  mx_memory.c  mx_memory.h  mx_types.h  mx_util.h  mx_video.c  mx_video.h
lib/gl/: mx_gl_common.c  mx_gl_common.h  mx_gl_program.c  mx_gl_program.h
src/: Makefile.am  main.c
src/libmodex/: Makefile.am  mx_modex.c  mx_modex.h
src/libmodex/core/: mx_color.c  mx_color.h  mx_log.c  mx_log.h  mx_math.c  mx_math.h  mx_matrix4.c  mx_matrix4.h  mx_memory.c  mx_memory.h  mx_slist.c  mx_slist.h  mx_types.h  mx_uintmap.c  mx_uintmap.h  mx_uintpool.c  mx_uintpool.h  mx_util.c  mx_util.h  mx_vector.c  mx_vector.h  mx_video.c  mx_video.h
src/libmodex/ext/glad/: glad.c  glad.h
src/libmodex/gl/: mx_gl.c  mx_gl.h  mx_gl_common.c  mx_gl_common.h  mx_gl_fbo.c  mx_gl_fbo.h  mx_gl_info.c  mx_gl_info.h  mx_gl_program.c  mx_gl_program.h  mx_gl_rendermanager.c  mx_gl_rendermanager.h  mx_gl_rendertree.c  mx_gl_rendertree.h  mx_gl_resourcemanager.c  mx_gl_resourcemanager.h  mx_gl_state.c  mx_gl_state.h  mx_gl_vbo.c  mx_gl_vbo.h  mx_gl_vertex.c  mx_gl_vertex.h
src/libmodex/sdl/: mx_sdl.c  mx_sdl.h  mx_sdl_screen.c  mx_sdl_screen.h
src/libmodex/util/: mx_memstream.c  mx_memstream.h
src/tests/: Makefile.am  check_slist.c
